--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.h2.console.enabled=true
 
 #Server Config
 server.port=8080
-server.servlet.context-path=/recruitment-process
-spring.application.name=recruitment-process
+server.servlet.context-path=/recruiting-process
+spring.application.name=recruiting-process
 server.error.include-stacktrace=never
